<package>
  <name>rosmaster</name>
  <version>1.12.7</version>
  <description>
    ROS <a href="http://ros.org/wiki/Master">Master</a> implementation.
    This version has been modified to be compatible with Secure ROS.
  </description>
  <maintainer email="aravind@ai.sri.com">Aravind Sundaresan</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rosmaster</url>
  <author>Ken Conley</author>
  <author>Aravind Sundaresan</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <run_depend>rosgraph</run_depend>
  <run_depend>python-defusedxml</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
    <architecture_independent/>
  </export>
</package>
