<package>
  <name>xmlrpcpp</name>
  <version>1.11.20</version>
  <description>
    XmlRpc++ is a C++ implementation of the XML-RPC protocol. This version is
    heavily modified from the package available on SourceForge in order to
    support roscpp's threading model. As such, we are maintaining our
    own fork.
    This version has been modified to be compatible with Secure ROS.
  </description>
  <maintainer email="aravind@ai.sri.com">Aravind Sundaresan</maintainer>
  <license>LGPL-2.1</license>

  <url>http://xmlrpcpp.sourceforge.net</url>
  <author>Chris Morley</author>
  <author>Konstantin Pilipchuk</author>
  <author>Morgan Quigley</author>
  <author>Aravind Sundaresan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cpp_common</build_depend>

  <run_depend>cpp_common</run_depend>

  <export>
    <rosdoc external="http://xmlrpcpp.sourceforge.net/doc/hierarchy.html"/>
  </export>
</package>
